--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,22 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+
+#compiled files
+*.sdf
+*.lib
+*.exe
+*.pdb
+*.obj
+*.tlog
+*.log
+*.cache
+*.lastbuildstate
+*.filters
+*.user
+*.manifest
+*.idb
+*.unsuccessfulbuild
+*.opensdf
+*.suo
+*.ipch
